Modification de la couleure de fond

--- a/git.html
+++ b/git.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-<body  style="background-color: turquoise">
-    <h1 style="padding-top:20%; padding-bottom:20%; text-align: center">trouve un stage</h1>
+<body  style="background-color:#bdc3c7">
+    <h1 style="padding-top:20%; padding-bottom:20%; text-align: center; color: white">trouve un stage</h1>
 
 
     bonjour les jeunes etudiant.
